V 1.0 기초부분구현

--- a/SW Book Renew/bin/.gitignore
+++ b/SW Book Renew/bin/.gitignore
@@ -16,3 +16,8 @@
 /makeTable.class
 /URL.class
 /XMLReader.class
+/ID_PW_CODE.class
+/KeyboardListener.class
+/LoginEventHandler.class
+/LoginFrame.class
+/Main.class
