--- a/SW Book Renew/bin/.gitignore
+++ b/SW Book Renew/bin/.gitignore
@@ -1,23 +1,2 @@
-/Help.class
-/Setting.class
-/bookList$ClickListenerClass.class
-/bookList.class
-/fileControl.class
-/info.class
-/makeBookList$AddListenerClass.class
-/makeBookList$AvgListenerClass.class
-/makeBookList$HelpListenerClass.class
-/makeBookList$InsertListenerClass.class
-/makeBookList$ListListenerClass.class
-/makeBookList$LoadListenerClass.class
-/makeBookList$SaveListenerClass.class
-/makeBookList$SetListenerClass.class
-/makeBookList.class
-/makeTable.class
-/URL.class
-/XMLReader.class
-/ID_PW_CODE.class
-/KeyboardListener.class
-/LoginEventHandler.class
-/LoginFrame.class
-/Main.class
+/Book.class
+/XmlSaxParserHandler.class
