초기 화면 재편성

--- a/SW Book Renew/bin/.gitignore
+++ b/SW Book Renew/bin/.gitignore
@@ -1,5 +1,27 @@
-/database.class
-/model/
-/Book.class
+/Help.class
+/KeyboardListener.class
+/LoginEventHandler.class
+/LoginFrame.class
+/Main.class
+/Setting.class
+/bookList$ClickListenerClass.class
+/bookList.class
 /controller/
-/view/
+/fileControl.class
+/info.class
+/makeBookList$AddListenerClass.class
+/makeBookList$AvgListenerClass.class
+/makeBookList$HelpListenerClass.class
+/makeBookList$InsertListenerClass.class
+/makeBookList$ListListenerClass.class
+/makeBookList$LoadListenerClass.class
+/makeBookList$SaveListenerClass.class
+/makeBookList$SetListenerClass.class
+/makeBookList.class
+/makeTable.class
+/model/
+/makeFirstFrame.class
+/makeFirstFrame$bookManageListenerClass.class
+/makeFirstFrame$Btn1ListenerClass.class
+/makeFirstFrame$Btn2ListenerClass.class
+/makeFirstFrame$Btn3ListenerClass.class
