로그인 창 회원가입 기능 추가

--- a/SW Book Renew/bin/.gitignore
+++ b/SW Book Renew/bin/.gitignore
@@ -1,4 +1,16 @@
-/view/
-/model/
+/KeyboardListener.class
+/LoginEventHandler.class
+/LoginFrame.class
+/Main.class
 /Test/
+/bookList$ClickListenerClass.class
+/bookList.class
 /controller/
+/fileControl.class
+/info.class
+/makeTable.class
+/model/
+/view/
+/registerEventHandler.class
+/makeRegisterFrame.class
+/realRegistEventHandler.class
